Add description on the MPI multithreading model

--- a/CourseWork/course.tex
+++ b/CourseWork/course.tex
@@ -1,4 +1,5 @@
-\chapter{MPI и потоки}
+\chapter{Введение}
+\section{MPI и потоки}
 	
 	% http://www.mcs.anl.gov/research/projects/mpi/mpi-standard/mpi-report-2.0/node163.htm#Node163
 	Процесс в MPI может быть многопоточным. 
@@ -28,7 +29,7 @@
 	В MPI запрос может быть выполнен только один раз. 
 	Любая комбинация ожидания или теста, которая нарушает это правило, является ошибочной.
 	
-	\section{Инициализация}
+	\subsection{Инициализация}
 	Следующая функция может использоваться для инициализации MPI и инициализации среды потока MPI вместо \textit{MPI\_INIT}.
 	
 	\textit{MPI\_INIT\_THREAD(required, provided)}
@@ -60,4 +61,19 @@
 	Если возможно, вызов будет успешно возвращен при \textit{provided} = \textit{required}. 
 	В противном случае вызов вернет максимальный поддерживаемый уровень \textit{provided} > \textit{required} (таким образом, обеспечивающий более высокий уровень поддержки, чем требуется пользователю).
 	Наконец, если требование пользователя не может быть удовлетворено, тогда вызов вернёт максимально поддерживаемый уровень.
+	
+\chapter{ЯГСПП}
+	Ограничение реализации заключается в отсутствии рекурсии. Модуль не может передавать данные самому себе.
+
+	\section{Принципы реализации}
+	\begin{itemize}
+		\item Модули распределяются между узлами вычислительной сети до начала вычислений. Каждый модуль исполняется только на закреплённом за ним узле сети. Принцип распределения не уточняется. В простейшем случае случайно и равномерно.
+		\item На каждом узле существует единственный поток, осуществляющий сообщение по MPI с вычислительной сетью.
+		\item Принимаемые сообщения после обработки отправляются в буфер.
+		\item Поток-планировщик ГСПП сканирует буфер и определяет модули, готовые к срабатыванию. Для каждого завершённого набора данных запускается нить. 
+		\item После выполнения вычислений модуль определяет значения, которые будут переданы другим модулям. Значения отправляются в буфер. С помощью реестра модулей формируются сообщения и, если необходимо, передаются на другие узлы сети через нить MPI.
+	\end{itemize}
+	
+
+
 	
