Fix text alignment in step 2 of instruction

--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -48,7 +48,8 @@ public class TestApp
 }
 	 					\end{lstlisting}
 	 				\end{ListingEnv}%
-	 			\item При запуске приложения создать $ com.github.goto1134.simpr.SimprMessageHandler $, передав в него реализованный интерфейс.
+	 			\item При запуске приложения создать экземпляр 
+	 			$ com.github.goto1134.simpr.SimprMessageHandler $, передав в него реализованный интерфейс.
 	 			\begin{ListingEnv}[!h]% настройки floating аналогичны окружению figure
 	 				%	 					\captiondelim{ } % разделитель идентификатора с номером от наименования
 	 				\caption{Пример кода, запускающего приложение}
