Add work skeleton

--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,5 +1,10 @@
 	\section{Цель работы}
-		
+		Изучить методы и средства автоматизированного реферирования и аннотирования текстов на естественном языке, а также получить навыки работы с подобными системами.	
 	\section{Порядок выполенения работы}
-	
+		\subsection{Обзор существующих систем автоматического реферирования и аннотирования}
+			\subsubsection{Open Text Summarizer}
+			https://www.splitbrain.org/services/ots	
+			\subsection{t-CONSPECTUS}
+			t-CONSPECTUS — это саммарайзер экстрактного типа, т.е. он формирует реферат из предложений оригинальной статьи, которые в процессе анализа получили наибольший вес, и, следовательно, лучше всего передают смысл содержимого.
+			http://tconspectus.pythonanywhere.com/summarization
 	\section{Вывод}
