--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Технология автоматического распознавания образов. OCR-системы.}{Технология автоматического распознавания образов. OCR-системы.}}
+{\texorpdfstring{Технологии обработки, автоматизированного реферирования и аннотирования текстов на естественном языке}{Технологии обработки, автоматизированного реферирования и аннотирования текстов на естественном языке}}
 \newcommand{\courseName}
 {Программное обеспечение искусственного интеллекта}
 \newcommand{\labNumber}
-{1}
+{3}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
