--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Временные логики}{Временные логики}}
 \newcommand{\courseName}
-{Название Предмета}
-\newcommand{\labNumber}
-{1}
+{Дискретные математические модели}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
@@ -26,9 +24,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Вагин Вадим Николаевич}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{В.Н.~Вагин}
 
 
 % To avoid conflict with beamer class use \providecommand
