--- a/LabWork/title.tex
+++ b/LabWork/title.tex
@@ -19,7 +19,7 @@
 
 \vspace{0pt plus7fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
 \begin{center}%
-	\Large\MakeUppercase{Лабораторная работа № \labNumber}
+	\Large\MakeUppercase{Реферат}
 	
 	\large По курсу <<\courseName>>
 	
