--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -215,6 +215,223 @@
   language = {english}
 }
 
+@ARTICLE{Prior,
+  author   = {A. Prior},
+  title    = {Past, Present and Future},
+  journal  = {Oxford University Press},
+  year     = {1967},
+  note     = {London},
+  language = {english}
+}
+
+@ARTICLE{Bucci,
+  author   = {G. Bucci, and M. Campanai, and P. Nesi},
+  title    = {Tools for specifying real-time systems},
+  journal  = {Journal of Real-Time Systems},
+  year     = {1995},
+  number   = {8},
+  pages    = {117-172},
+  month    = {3},
+  language = {english}
+}
+
+@ARTICLE{Manna,
+  author   = {Z. Manna, and A. Pnueli},
+  title    = {Proving precedence properties: The temporal way.},
+  journal  = {Proc. of the 10th Colloquium on Automata Languages and Programming, Lecture Notes in Computer Science},
+  year     = {1983},
+  number   = {154},
+  pages    = {491-512},
+  month    = {7},
+  language = {english}
+}
+
+@ARTICLE{Rosner,
+  author   = {R. Rosner, and A. Pnueli},
+  title    = {A choppy logic},
+  journal  = {1st IEEE Symp. on Logic in Computer Science},
+  year     = {1986},
+  pages    = {306-313},
+  language = {english}
+}
+
+@ARTICLE{PnueliOne,
+  author   = {A. Pnueli},
+  title    = {The temporal logic of programs.},
+  journal  = {18th IEEE FOCS},
+  year     = {1977},
+  language = {english}
+}
+
+@ARTICLE{PnueliTwo,
+  author   = {A. Pnueli},
+  title    = {Temporal semantics of concurrent programs.},
+  journal  = {Theoretical Computer Science},
+  pages   = {13},
+  year     = {1981},
+  language = {english}
+}
+
+@ARTICLE{PnueliThree,
+  author   = {A. Pnueli},
+  title    = {Applications of temporal logic to specification and verification of reactive systems: A survey of current trends.},
+  journal  = {Current Trends in Concurrency},
+  year     = {1986},
+  language = {english}
+}
+
+@ARTICLE{BTTL,
+  author   = {M. Ben-Ari, and A. Pnueli, and Z. Manna},
+  title    = {The temporal logic of branching time.},
+  journal  = {Acta Informatica},
+  year     = {1983},
+  pages    = {20},
+  language = {english}
+}
+
+@ARTICLE{ITL,
+  author   = {J. Halpern, and Z. Manna, and B. Moszkowski},
+  title    = {A hardware semantics based on temporal intervals.},
+  jjournal  = {Proc. of the 10th Colloquium on Automata Languages and Programming, Lecture Notes in Computer Science},
+  year     = {1983},
+  number   = {154},
+  pages    = {278-291},
+  month    = {7},
+  language = {english}
+}
+
+@ARTICLE{PMLTI,
+  author   = {J. Halpern, and Y. Shoham},
+  title    = {A propositional modal logic of time intervals.},
+  jjournal  = {Proc. of the 1st IEEE Symp. on Logic in Computer Science},
+  year     = {1986},
+  pages    = {274-292},
+  language = {english}
+}
+
+@ARTICLE{Clarke,
+  author   = {E. Clarke, and E. Emerson, and A.Sistla},
+  title    = {Automatic verification of finite-state concurrent systems using temporal logic specification.},
+  journal  = {ACM TOPLAS},
+  number   = {8},
+  year     = {1986},
+  pages    = {244-263},
+  language = {english}
+}
+
+@ARTICLE{ClarkeGrumberg,
+  author   = {E. Clarke, and O. Grumberg},
+  title    = {The model checking problems for concurrent systems with many similar processes.},
+  journal  = {Proc. of the International Conference on Temporal Logic in Specification},
+  year     = {1987},
+  pages    = {188-201},
+  language = {english}
+}
+
+@ARTICLE{IL,
+  author   = {R.L. Shwartz, and P.M. Mellinar-Smith, and F.H. Vogt},
+  title    = {An interval logic for higher-level temporal reasoning.},
+  journal  = {Proc. of the 2nd Annual ACM Symp. Principles of Distributed Computing, Lecture Notes in Computer Science},
+  year     = {1983},
+  pages    = {173-186},
+  month = {8},
+  language = {english}
+}
+
+@ARTICLE{EIL,
+  author   = {P.M.Mellinar-Smith},
+  title    = {Extending interval logic to real-time systems.},
+  journal  = {Proc. of Temporal Lofic Specification United Kingdom},
+  year     = {1987},
+  pages    = {224-242},
+  month = {4},
+  language = {english}
+}
+
+@ARTICLE{RTIL,
+  author   = {R.R. Razouk, and M.M. Gorlick},
+  title    = {A real-time interval logic for reasoning about executions of real-time programs.},
+  journal  = {Proc. of the ACM/SIGSOFT`89},
+  year     = {1989},
+  pages    = {10-19},
+  month = {12},
+  language = {english}
+}
+
+@ARTICLE{Allen,
+  author   = {J.F. Allen, and G. Ferguson},
+  title    = {Actions and event in interval temporal logic.},
+  journal  = {Technical report, University of Rechester Computer Science Department, TR-URCSD 521},
+  year     = {1994},
+  month = {7},
+  language = {english}
+}
+
+@ARTICLE{RTTL,
+  author   = {J.S. Ostroff},
+  title    = {Temporal Logic for Real-Time Systems.},
+  journal  = {Advanced Software Development Series},
+  number   = {1},
+  year     = {1989},
+  language = {english}
+}
+
+@ARTICLE{RTTLWon,
+  author   = {J.S. Ostroff, and W. Wonham},
+  title    = {Modeling and verifying real-time embedded computer systems.},
+  journal  = {Proc. of the 8th IEEE Real-Time System Symposium},
+  pages    = {124-132},
+  year     = {1987},
+  language = {english}
+}
+
+@ARTICLE{RTL,
+  author   = {F. Jahanian, and A. K.-L. Mok.},
+  title    = {Safety analysis of timing properties in real-time systems.},
+  journal  = {IEEE Transactions on Software Engineering},
+  number   = {12},
+  pages    = {890-904},
+  year     = {1986},
+  language = {english}
+}
+
+@ARTICLE{TRIO,
+  author   = {C. Ghezzi, and D. Mandrioli, and A. Morzenti},
+  title    = {Trio, a logic language for executable specifications of real-time systems.},
+  journal  = {Journal of Systems and Software},
+  number   = {12},
+  pages    = {107-123},
+  year     = {1990},
+  month    = {5},
+  language = {english}
+}
+
+@ARTICLE{MTL,
+  author   = {R. Koymans},
+  title    = {Specifying real-time properties with metric temporal logic.},
+  journal  = {Real-Time Systems Journal},
+  number   = {2},
+  pages    = {255-299},
+  year     = {1990},
+  language = {english}
+}
+
+@ARTICLE{TILCO,
+  author   = {R. Mattolini, and P. Nesi},
+  title    = {An interval logic for real-time system specification.},
+  journal  = {IEEE Transactions on Software Engineering},
+  year     = {1999},
+  language = {english}
+}
+
+@ARTICLE{TPTL,
+  author   = {R. Alur, and T.A. Henzinger},
+  title    = {A really temporal logic.},
+  journal  = {30th IEEE FOCS},
+  year     = {1989},
+  language = {english}
+}
+
 @BOOK{Book,
   author    = {Peter Babington}, 
   title     = {The title of the work},
@@ -227,6 +444,16 @@
   month     = {7},
   note      = {An optional note},
   isbn      = {3257227892},
+  language  = {english}
+}
+
+@BOOK{Abramsky,
+  author    = {S. Abramsky, D.M. Gabbay, T.S.E.Maibaum}, 
+  title     = {Handbook of Logic in Computer},
+  publisher = {Oxford Science Publications},
+  year      = {1992},
+  volume    = {1},
+  series    = {10},
   language  = {english}
 }
 
